<resources>
    <string name="app_name">Attendance Monitor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="roll_number">Roll Number</string>
    <string name="name">Name</string>
    <string name="request_roll">Enter Roll Number</string>
    <string name="request_name">Enter Name</string>
    <string name="submit">Submit</string>
</resources>
