<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userProfileActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="170sp"
        android:layout_marginRight="25sp"
        android:text="@string/roll_number"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/enterRoll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginBottom="12.5sp"
        android:ems="10"
        android:hint="@string/request_roll"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="12.5sp"
        android:layout_marginRight="25sp"
        android:text="@string/name"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="0sp"
        android:layout_marginRight="25sp"
        android:ems="10"
        android:hint="@string/request_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/submitRollName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:background="#0000FF"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


</LinearLayout>